--- a/common/templates/common/index.html
+++ b/common/templates/common/index.html
@@ -6,7 +6,7 @@
    <title>Title</title>
 </head>
 <body>
-   <h1>Приветствую вас на моем первом Django приложении</h1>
+   <h1>Всем привет, вы подключились к моему первому django приложению</h1>
     <img src="{% static 'common/img.jpg' %}" alt="Welcome image">
 </body>
 </html>
